[gd_scene load_steps=5 format=3 uid="uid://dxajbvnuy6oog"]

[ext_resource type="Script" uid="uid://dyyj20gmjpcmx" path="res://GameCore/Scripts/VictoryPopup.gd" id="1"]

[sub_resource type="LabelSettings" id="1"]
font_size = 75

[sub_resource type="LabelSettings" id="2"]
font_size = 30

[sub_resource type="LabelSettings" id="3"]
font_size = 35

[node name="VictoryPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel"]
layout_mode = 2
offset_left = -157.0
offset_top = -274.0
offset_right = 155.0
offset_bottom = -171.0
text = "VITÓRIA!"
label_settings = SubResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/Panel"]
layout_mode = 2
offset_left = -496.0
offset_top = -148.0
offset_right = 497.0
offset_bottom = -106.0
text = "Você encontrou a chave de acesso e conseguiu escapar com sucesso!"
label_settings = SubResource("2")

[node name="Stats" type="Label" parent="CenterContainer/Panel"]
layout_mode = 2
offset_left = -113.0
offset_top = -44.0
offset_right = 112.0
offset_bottom = 57.0
text = "Mortes: 0
Tempo: 00:00"
label_settings = SubResource("3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OK" type="Button" parent="CenterContainer/Panel"]
layout_mode = 2
offset_left = -196.0
offset_top = 189.0
offset_right = 200.0
offset_bottom = 257.0
text = "Jogar Novamente"

[node name="OK2" type="Button" parent="CenterContainer/Panel"]
layout_mode = 2
offset_left = -197.0
offset_top = 101.0
offset_right = 199.0
offset_bottom = 169.0
text = "Voltar ao menu"

[connection signal="pressed" from="CenterContainer/Panel/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/OK2" to="." method="_on_ok2_pressed"]
